# gh-to-gitea

./: README.md  pyproject.toml
cli/: gitea.py  main.py
src/gh_to_gitea/: gh.py  gitea.py  main.py
