[project]
name = "gh-to-gitea"
version = "0.1.0"
description = "A CLI tool to mirror GitHub repositories to Gitea."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygithub>=2.5.0",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
